--- a/19X_Traceability_UWP/MainPage.xaml
+++ b/19X_Traceability_UWP/MainPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    FontSize="50" >
+    FontSize="50" Loaded="Page_Loaded" >
 
     <Grid>
         <Grid.RowDefinitions>
@@ -44,8 +44,8 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="1" Content="Exportovat" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Width="300"/>
-            <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="OK: Flashdisk připojen" VerticalAlignment="Center" FontSize="30" />
+            <TextBlock x:Name="DriveConnected" Grid.Column="0" HorizontalAlignment="Center" TextWrapping="Wrap" Text="OK: Flashdisk připojen" VerticalAlignment="Center" FontSize="30" Visibility="Collapsed" />
+            <Button x:Name="BtnExport" Grid.Column="1" Content="Exportovat" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Width="300" IsEnabled="False"/>
         </Grid>
 
     </Grid>
