--- a/19X_Traceability_UWP/MainPage.xaml
+++ b/19X_Traceability_UWP/MainPage.xaml
@@ -45,7 +45,7 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <TextBlock x:Name="DriveConnected" Grid.Column="0" HorizontalAlignment="Center" TextWrapping="Wrap" Text="OK: Flashdisk připojen" VerticalAlignment="Center" FontSize="30" Visibility="Collapsed" />
-            <Button x:Name="BtnExport" Grid.Column="1" Content="Exportovat" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Width="300" IsEnabled="False"/>
+            <Button x:Name="BtnExport" Grid.Column="1" Content="Exportovat" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Width="300" IsEnabled="False" Click="BtnExport_Click"/>
         </Grid>
 
     </Grid>
