--- a/19X_Traceability_UWP/MainPage.xaml
+++ b/19X_Traceability_UWP/MainPage.xaml
@@ -12,17 +12,17 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="0.2*"/>
+            <RowDefinition Height="0.4*"/>
             <RowDefinition Height="0.9*"/>
             <RowDefinition Height="0.1*"/>
             <RowDefinition Height="0.9*"/>
-            <RowDefinition Height="0.2*"/>
+            <RowDefinition Height="0.4*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Margin="0 20 0 0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="2.5*"/>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="0.3*"/>
                 <ColumnDefinition Width="1*"/>
@@ -42,7 +42,7 @@
             <TextBlock Grid.Column="0" HorizontalAlignment="Right" TextWrapping="Wrap" Text="OD:" VerticalAlignment="Center"/>
             <!-- How to adjust DatePicker width (how to edit template):
              https://stackoverflow.com/questions/33043070/setting-width-on-datepicker-or-timepicker-xaml-uap -->
-            <DatePicker Grid.Column="1" x:Name="From" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="100" Background="WhiteSmoke" Width="800" />
+            <DatePicker Grid.Column="1" x:Name="From" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="80" Background="WhiteSmoke" Width="800" />
         </Grid>
 
         <Grid Grid.Row="4">
@@ -51,18 +51,18 @@
                 <ColumnDefinition Width="6*"/>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" HorizontalAlignment="Right" TextWrapping="Wrap" Text="DO:" VerticalAlignment="Center"/>
-            <DatePicker Grid.Column="1" x:Name="To" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="100" Background="WhiteSmoke" Width="800" />
+            <DatePicker Grid.Column="1" x:Name="To" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="80" Background="WhiteSmoke" Width="800" />
         </Grid>
 
         <Grid Grid.Row="6" Margin="0 0 0 20">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1.1*"/>
                 <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1.1*"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="BtnExportLast" Grid.Column="0" Content="EXPORTOVAT NOVÉ" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="320" IsEnabled="False" Click="BtnExportLast_Click" Height="110" Visibility="Collapsed" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" />
-            <Button x:Name="BtnExportDate" Grid.Column="1" Content="EXPORTOVAT OD-DO" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="320" IsEnabled="False" Click="BtnExportDate_Click" Height="110" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" />
-            <Button x:Name="BtnExportAll" Grid.Column="2" Content="EXPORTOVAT VŠE" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="320" IsEnabled="False" Click="BtnExportAll_Click" Height="110" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" />
+            <Button x:Name="BtnExportLast" Grid.Column="0" Content="EXPORTOVAT NOVÉ" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="False" Click="BtnExportLast_Click" Height="110" Visibility="Collapsed" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" Margin="0 0 15 0" />
+            <Button x:Name="BtnExportDate" Grid.Column="1" Content="EXPORTOVAT OD-DO" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="False" Click="BtnExportDate_Click" Height="110" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" />
+            <Button x:Name="BtnExportAll" Grid.Column="2" Content="EXPORTOVAT VŠE" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="False" Click="BtnExportAll_Click" Height="110" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" Margin="15 0 0 0" />
         </Grid>
 
     </Grid>
