--- a/19X_Traceability_UWP/MainPage.xaml
+++ b/19X_Traceability_UWP/MainPage.xaml
@@ -54,13 +54,15 @@
             <DatePicker Grid.Column="1" x:Name="To" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="80" Background="WhiteSmoke" Width="800" />
         </Grid>
 
+        <ProgressBar x:Name="ExportProgressBar" Grid.Row="5" IsIndeterminate="True" Visibility="Collapsed" />
+
         <Grid Grid.Row="6" Margin="0 0 0 20">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1.1*"/>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1.1*"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="BtnExportLast" Grid.Column="0" Content="EXPORTOVAT NOVÉ" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="False" Click="BtnExportLast_Click" Height="110" Visibility="Collapsed" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" Margin="0 0 15 0" />
+            <Button x:Name="BtnExportLast" Grid.Column="0" Content="EXPORTOVAT NOVÉ" HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="False" Click="BtnExportLast_Click" Height="110" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" Margin="0 0 15 0" />
             <Button x:Name="BtnExportDate" Grid.Column="1" Content="EXPORTOVAT OD-DO" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="False" Click="BtnExportDate_Click" Height="110" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" />
             <Button x:Name="BtnExportAll" Grid.Column="2" Content="EXPORTOVAT VŠE" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="30" Width="300" IsEnabled="False" Click="BtnExportAll_Click" Height="110" Foreground="#FF000000" Background="WhiteSmoke" BorderBrush="#FF000000" Margin="15 0 0 0" />
         </Grid>
